--- a/vmdir/vmdird/DceRpcWin32.props
+++ b/vmdir/vmdird/DceRpcWin32.props
@@ -8,7 +8,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\include;$(SolutionDir)..\thirdparty\openldap\include;$(SolutionDir)..\common\win;$(SolutionDir)..\include;$(SolutionDir)..\include\public;$(SolutionDir)..\include\win;$(SolutionDir)..\thirdparty\likewise-security-sd-win32\lwbase\include\win32;$(SolutionDir)..\thirdparty\likewise-security-sd-win32\lwbase\include;$(SolutionDir)..\thirdparty\openldap\libraries\libldap;$(SolutionDir)..\thirdparty\openldap\libraries\mdb;$(SolutionDir)..\thirdparty\openldap\libraries\liblber;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\include;$(SolutionDir)..\thirdparty\openldap\include;$(SolutionDir)..\common\win;$(SolutionDir)..\include;$(SolutionDir)..\include\public;$(SolutionDir)..\include\win;$(LIGHTWAVE_LIKEWISE_ROOT)\include\win32;$(LIGHTWAVE_LIKEWISE_ROOT)\include;$(SolutionDir)..\thirdparty\openldap\libraries\libldap;$(SolutionDir)..\thirdparty\openldap\libraries\mdb;$(SolutionDir)..\thirdparty\openldap\libraries\liblber;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Include;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>HAVE_DCERPC_WIN32;HAVE_PTHREADS_WIN32;HAVE_NCACN_IP_TCP;UUID_DEFINED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
