--- a/vmidentity/openidconnect/client/src/test/resources/config.properties
+++ b/vmidentity/openidconnect/client/src/test/resources/config.properties
@@ -1,9 +1,9 @@
 oidc.op.FQDN = localhost.localdomain
 oidc.op.port = 443
 oidc.rp.prefix = oidc-client-test-
-admin.user = Administrator@vsphere.local
-admin.password = Admin!23
-tenant = vsphere.local
+admin.user = Administrator@lw-testdom.com
+admin.password = Ca$hc0w1
+tenant = lw-testdom.com
 
 # GSS grant test AD domain config
 ad.domain = SSOLABS.COM
