--- a/vmdir/tools/vdcleavefed/win/vdcleavefed.vcxproj
+++ b/vmdir/tools/vdcleavefed/win/vdcleavefed.vcxproj
@@ -97,8 +97,8 @@
       <ShowProgress>false</ShowProgress>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>Shlwapi.lib;user32.lib;libcommon.lib;ws2_32.lib;liblber.lib;libldap_r.lib;libeay32.lib;ssleay32.lib;libvmdirclient.lib;liblwbase-sd-win32.lib;libvmdirlogging.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Shlwapi.lib;user32.lib;libcommon.lib;ws2_32.lib;liblber.lib;libldap_r.lib;libeay32.lib;ssleay32.lib;libvmdirclient.lib;liblwbase.lib;libvmdirlogging.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_LIKEWISE_ROOT)\$(ConfigurationName)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -125,8 +125,8 @@
       <ShowProgress>false</ShowProgress>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>Shlwapi.lib;user32.lib;libcommon.lib;ws2_32.lib;liblber.lib;libldap_r.lib;libeay32.lib;ssleay32.lib;libvmdirclient.lib;liblwbase-sd-win32.lib;libvmdirlogging.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Shlwapi.lib;user32.lib;libcommon.lib;ws2_32.lib;liblber.lib;libldap_r.lib;libeay32.lib;ssleay32.lib;libvmdirclient.lib;liblwbase.lib;libvmdirlogging.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_LIKEWISE_ROOT)\$(ConfigurationName)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
