--- a/vmdir/tools/vmkdc_admin/win/vmkdc_admin.vcxproj
+++ b/vmdir/tools/vmkdc_admin/win/vmkdc_admin.vcxproj
@@ -81,8 +81,8 @@
       <AdditionalIncludeDirectories>$(LIGHTWAVE_WINDOWS_SDK_ROOT)\include;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\atlmfc\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>advapi32.lib;libcommon.lib;libvmdirclient.lib;liblwbase-sd-win32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libkdctools.lib;libkrb5-crypto.lib;libasn1db.lib;libasn1.lib;libkdckrb5.lib;pthreadVC2.lib;libeay32.lib;ssleay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(SolutionDir)..\vmdir\vmdird\$(Platform)\$(Configuration);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>advapi32.lib;libcommon.lib;libvmdirclient.lib;liblwbase.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libkdctools.lib;libkrb5-crypto.lib;libasn1db.lib;libasn1.lib;libkdckrb5.lib;pthreadVC2.lib;libeay32.lib;ssleay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(SolutionDir)..\vmdir\vmdird\$(Platform)\$(Configuration);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64;$(LIGHTWAVE_LIKEWISE_ROOT)\$(ConfigurationName)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <TargetMachine>MachineX64</TargetMachine>
     </Link>
@@ -97,8 +97,8 @@
       <AdditionalIncludeDirectories>$(LIGHTWAVE_WINDOWS_SDK_ROOT)\include;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\atlmfc\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>advapi32.lib;libcommon.lib;libvmdirclient.lib;liblwbase-sd-win32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libkdctools.lib;libkrb5-crypto.lib;libasn1db.lib;libasn1.lib;libkdckrb5.lib;pthreadVC2.lib;libeay32.lib;ssleay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(SolutionDir)..\vmdir\vmdird\$(Platform)\$(Configuration);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>advapi32.lib;libcommon.lib;libvmdirclient.lib;liblwbase.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libkdctools.lib;libkrb5-crypto.lib;libasn1db.lib;libasn1.lib;libkdckrb5.lib;pthreadVC2.lib;libeay32.lib;ssleay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(SolutionDir)..\vmdir\vmdird\$(Platform)\$(Configuration);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64;$(LIGHTWAVE_LIKEWISE_ROOT)\$(ConfigurationName)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <TargetMachine>MachineX64</TargetMachine>
     </Link>
   </ItemDefinitionGroup>
