--- a/vmdns/test/win/dnstest.vcxproj
+++ b/vmdns/test/win/dnstest.vcxproj
@@ -90,7 +90,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gssapi64.lib;advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;gssapi64.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_VMDIR_ROOT)\lib64\$(ConfigurationName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -106,7 +106,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gssapi64.lib;advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_VMDIR_ROOT)\lib64\$(ConfigurationName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -126,7 +126,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gssapi64.lib;advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_VMDIR_ROOT)\lib64\$(ConfigurationName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -146,7 +146,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gssapi64.lib;advapi32.lib;dcelib.lib;ws2_32.lib;user32.lib;Gdi32.lib;wldap32.lib;libcommon.lib;libsrvcommon.lib;pthreadVC2.lib;libldap_r.lib;libvmdirclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)$(IntDir);$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(Configuration)\lib;$(LIGHTWAVE_VMDIR_ROOT)\lib64\$(ConfigurationName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -173,7 +173,7 @@
     <ProjectReference Include="..\..\vmsock\vmsock.vcxproj">
       <Project>{39e99556-f76d-4d1c-b0e5-3b0fcd271aff}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\server\common\win\libsrvcommon.vcxproj">
+    <ProjectReference Include="..\..\server\common\win\libsrvcommon.vcxproj">
       <Project>{65c190f2-b089-11e4-90f7-f8bc1233efa6}</Project>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
