Update appliance scripts to support SSL Subject Alt Names
Change-Id: I4b794eb6e670e60a7498c356c3478201e600eec1

--- a/appliance/packer/photon/config/lightwave-server.cfg
+++ b/appliance/packer/photon/config/lightwave-server.cfg
@@ -5,3 +5,4 @@ password={{{LIGHTWAVE_PASSWORD}}}
 site-name=Default-first-site
 first-instance={{IS_FIRST_INSTANCE}}
 hostname={{{LIGHTWAVE_HOSTNAME}}}
+ssl-subject-alt-name={{{SSL_SUBJECT_ALT_NAME}}}
